unpackaged/main/default/objects/Application__c/fields/SettlementStatus__c.field-meta.xml
<CustomField>
    <fullName>SettlementStatus__c</fullName>
    <label>Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instruction Received</fullName>
            </value>
            <value>
                <fullName>Rework Received</fullName>
            </value>
            <value>
                <fullName>Document Sent</fullName>
            </value>
            <value>
                <fullName>Document Returned</fullName>
            </value>
            <value>
                <fullName>Document Verified</fullName>
            </value>
            <value>
                <fullName>Outstanding Requirements</fullName>
            </value>
            <value>
                <fullName>Ready to Book</fullName>
            </value>
            <value>
                <fullName>Settlement Booked</fullName>
            </value>
            <value>
                <fullName>Settlement Complete</fullName>
            </value>
            <value>
                <fullName>Title Registered</fullName>
            </value>
            <value>
                <fullName>Sent to Custodian</fullName>
            </value>
            <value>
                <fullName>Matter on Hold</fullName>
            </value>
            <value>
                <fullName>Matter off Hold</fullName>
            </value>
            <value>
                <fullName>Matter Not Proceeding</fullName>
            </value>
            <value>
                <fullName>Cancel Settlement</fullName>
            </value>
            <value>
                <fullName>Pend Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>