unpackaged/main/default/objects/Application__c/fields/StatusChangedDate__c.field-meta.xml
<CustomField>
    <fullName>StatusChangedDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Status Changed Date</label>
    <type>Date</type>
</CustomField>