unpackaged/main/default/objects/Application__c/fields/Surplus__c.field-meta.xml
<CustomField>
    <fullName>Surplus__c</fullName>
    <formula>IF(ISNULL(MonthlyIncome__c)  ||  ISNULL(MonthlyExpenses__c) || ISNULL(MonthlyLiabilities__c) || ISNULL(RepaymentAmount__c), 0, MAX(0, MonthlyIncome__c - MonthlyExpenses__c - MonthlyLiabilities__c -  RepaymentAmount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surplus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>