unpackaged/main/default/objects/Application__c/fields/TimeLeftOnLoanInMonths__c.field-meta.xml
<CustomField>
    <fullName>TimeLeftOnLoanInMonths__c</fullName>
    <label>Time Left on Loan in Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>