unpackaged/main/default/objects/Application__c/fields/TotalAmountofRepayments__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofRepayments__c</fullName>
    <inlineHelpText>Total Amount of Repayments over the Loan term</inlineHelpText>
    <label>Total Amount of Repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>