unpackaged/main/default/objects/Application__c/fields/TotalAssets__c.field-meta.xml
<CustomField>
    <fullName>TotalAssets__c</fullName>
    <label>Total Assets</label>
    <summarizedField>Asset__c.Value__c</summarizedField>
    <summaryForeignKey>Asset__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>