unpackaged/main/default/objects/Application__c/fields/TotalInterestAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalInterestAmount__c</fullName>
    <inlineHelpText>Total interest payable over the term of the loan</inlineHelpText>
    <label>Total Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>