unpackaged/main/default/objects/Application__c/fields/TotalMonthlyExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalMonthlyExpenses__c</fullName>
    <label>Total Monthly Expenses</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>