unpackaged/main/default/objects/Application__c/fields/TotalMonthlyLiabilities__c.field-meta.xml
<CustomField>
    <fullName>TotalMonthlyLiabilities__c</fullName>
    <label>Total Monthly Liabilities</label>
    <summarizedField>Liability__c.Repayment__c</summarizedField>
    <summaryForeignKey>Liability__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>