unpackaged/main/default/objects/Application__c/fields/TotalMonthyIncomes__c.field-meta.xml
<CustomField>
    <fullName>TotalMonthyIncomes__c</fullName>
    <label>Total Monthy Incomes</label>
    <summarizedField>Income__c.Amount__c</summarizedField>
    <summaryForeignKey>Income__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>