unpackaged/main/default/objects/Application__c/fields/TotalNoofBorrowers__c.field-meta.xml
<CustomField>
    <fullName>TotalNoofBorrowers__c</fullName>
    <label>Total No. of Borrowers</label>
    <summaryForeignKey>Applicant__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>