unpackaged/main/default/objects/Application__c/fields/TotalSavings__c.field-meta.xml
<CustomField>
    <fullName>TotalSavings__c</fullName>
    <label>Total Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>