unpackaged/main/default/objects/Application__c/fields/WaitlistDiscount__c.field-meta.xml
<CustomField>
    <fullName>WaitlistDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waitlist Discount (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>