unpackaged/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TotalAssets__c</columns>
    <columns>TotalMonthlyExpenses__c</columns>
    <columns>TotalMonthlyLiabilities__c</columns>
    <columns>TotalMonthyIncomes__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ExternalId__c</columns>
    <columns>JointSingle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>