unpackaged/main/default/objects/Application__c/listViews/Approved_Queue_Application.listView-meta.xml
<ListView>
    <fullName>Approved_Queue_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Approved Queue</label>
    <queue>Approved_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>