unpackaged/main/default/objects/Application__c/listViews/Chief_Operations_Officer_Head_of_Opera_Application.listView-meta.xml
<ListView>
    <fullName>Chief_Operations_Officer_Head_of_Opera_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Chief Operations Officer / Head of Opera</label>
    <queue>Chief_Operations_Officer_Head_of_Opera</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>