unpackaged/main/default/objects/Application__c/listViews/Chief_Risk_Officer_Chief_Executive_Off_Application.listView-meta.xml
<ListView>
    <fullName>Chief_Risk_Officer_Chief_Executive_Off_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Chief Risk Officer / Chief Executive Off</label>
    <queue>Chief_Risk_Officer_Chief_Executive_Off</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>