unpackaged/main/default/objects/Application__c/listViews/Credit_Underwriter_Application.listView-meta.xml
<ListView>
    <fullName>Credit_Underwriter_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Credit Underwriter</label>
    <queue>Credit_Underwriter</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>