unpackaged/main/default/objects/Application__c/listViews/Declined_Queue_Application.listView-meta.xml
<ListView>
    <fullName>Declined_Queue_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Declined Queue</label>
    <queue>Declined_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>