unpackaged/main/default/objects/Application__c/listViews/Loans_Officer_Application.listView-meta.xml
<ListView>
    <fullName>Loans_Officer_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Loans Officer</label>
    <queue>Loans_Officer</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>