unpackaged/main/default/objects/Application__c/listViews/Senior_Credit_Underwriter_Team_Leader_Application.listView-meta.xml
<ListView>
    <fullName>Senior_Credit_Underwriter_Team_Leader_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Senior Credit Underwriter / Team Leader</label>
    <queue>Senior_Credit_Underwriter_Team_Leader</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>