unpackaged/main/default/objects/Application__c/listViews/Submitted_Queue_Application.listView-meta.xml
<ListView>
    <fullName>Submitted_Queue_Application</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>JointSingle__c</columns>
    <columns>LoanAmount__c</columns>
    <columns>PropertyValue__c</columns>
    <columns>Decision__c</columns>
    <filterScope>Queue</filterScope>
    <label>Submitted Queue</label>
    <queue>Submitted_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>